fix: ensure overflow is visible for layout blocks on small screens

--- a/src/components/slots/layout/layout.scss
+++ b/src/components/slots/layout/layout.scss
@@ -71,6 +71,10 @@
     &--fixed {
       flex: none;
     }
+
+    @media (max-width: 460px) {
+      overflow: visible;
+    }
   }
 
   & > div + div {
